--- a/src/main/resources/templates/ads/create.html
+++ b/src/main/resources/templates/ads/create.html
@@ -1,10 +1,24 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
-    <meta charset="UTF-8">
-    <title>$Title$</title>
+    <meta charset="UTF-8" />
+    <div th:replace="partials :: head" /></div>
 </head>
 <body>
-$END$
+<nav th:replace="partials :: navbar" />
+<div class="container" style="text-align: center">
+    <h2>Create ad</h2>
+
+    <form action="/ads/create" method="post">
+        <label for="title">Title: </label>
+        <input type="text" name="title" id="title" class="field"/>
+        <br><br>
+        <label for="desc">Description:</label><br>
+        <textarea name="description" id="desc" class="field" rows="4" cols="50"></textarea><br>
+        <button>Save</button>
+    </form>
+</div>
+
+<footer th:replace="partials :: footer" />
 </body>
 </html>
