--- a/src/main/resources/templates/ads/show.html
+++ b/src/main/resources/templates/ads/show.html
@@ -1,10 +1,17 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
-    <meta charset="UTF-8">
-    <title>$Title$</title>
+    <meta charset="UTF-8" />
+    <div th:replace="partials :: head" /></div>
 </head>
 <body>
-$END$
+<nav th:replace="partials :: navbar" />
+<div class="container" style="text-align: center">
+    <h2>Ad</h2>
+    <p style="font-weight: bold" th:text="${ad.title}"> </p>
+        <p th:text="${ad.description}"> </p>
+</div>
+
+<footer th:replace="partials :: footer" />
 </body>
 </html>
