--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -2,7 +2,7 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8" />
-    <title>Home</title>
+<!--    <title>Home</title>-->
     <div th:replace="partials :: head" /></div>
 </head>
 <body>
