--- a/src/main/resources/templates/join.html
+++ b/src/main/resources/templates/join.html
@@ -2,12 +2,18 @@
 <html land="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8" />
-    <title>Join</title>
+<!--    <title>Join</title>-->
     <div th:replace="partials :: head" /></div>
 </head>
 <body>
 <nav th:replace="partials :: navbar" />
-<h1 th:text="${cohort}"></h1>
+<div class="alert alert-danger" th:if="${cohort} == null">
+    Something bad happened!
+</div>
+<div class="alert alert-success" th:unless="${cohort} == null"}>
+    <h1 th:text="${cohort}"></h1>
+</div>
+
 
 <form action="/join" method="post">
     <input type="text" name="cohort" id="cohort-ip" class="field" />
