--- a/src/main/resources/templates/partials.html
+++ b/src/main/resources/templates/partials.html
@@ -4,23 +4,47 @@
     <meta charset="UTF-8" />
     <link th:href="@{/css/bootstrap.min.css}" rel="stylesheet">
     <link th:href="@{/css/style.css}" rel="stylesheet">
-    <title th:text="${pagetitle}"></title>
+    <title th:text="${pageTitle}"></title>
     <!-- include stylesheets, etc here -->
 </head>
 <body>
-<nav th:fragment="navbar" class="navbar navbar-default">
-    <!-- awesome navbar goes here -->
-    <ul>
-        <li><a href="/home">Home</a></li>
-        <li><a href="/hello/Fortuna">Hello</a></li>
-        <li><a href="/join">Join</a></li>
-        <li><a href="/welcome">Welcome</a> </li>
-    </ul>
+<nav th:fragment="navbar" class="navbar navbar-expand-sm navbar-light bg-light mb-3">
+    <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav">
+            <li class="nav-item">
+                <a class="nav-link" href="/home">Home</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="/hello/Fortuna">Hello</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="/join">Join</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="/welcome">Welcome</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="/posts">List of posts</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="/posts/create">Create a new post</a>
+            </li>
+        </ul>
+    </div>
 </nav>
-<standard_scripts th:fragment="footer">
-    <script th:src="@{/js/jquery-3.0.0.min.js}"></script>
+<!--<nav th:fragment="navbar">-->
+<!--    &lt;!&ndash; awesome navbar goes here &ndash;&gt;-->
+<!--    <ul class="nav navbar-nav navbar-right">-->
+<!--        <li><a href="/home">Home</a></li>-->
+<!--        <li><a href="/hello/Fortuna">Hello</a></li>-->
+<!--        <li><a href="/join">Join</a></li>-->
+<!--        <li><a href="/welcome">Welcome</a> </li>-->
+<!--    </ul>-->
+<!--</nav>-->
+<div th:fragment="footer">
+    <script th:src="@{/js/jquery-3.2.1.min.js}"></script>
     <script th:src="@{/js/bootstrap.min.js}"></script>
 
-</standard_scripts>
+</div>
 </body>
 </html>
