--- a/src/main/resources/templates/posts/index.html
+++ b/src/main/resources/templates/posts/index.html
@@ -1,10 +1,28 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
-    <meta charset="UTF-8">
-    <title>$Title$</title>
+    <meta charset="UTF-8" />
+    <div th:replace="partials :: head" /></div>
 </head>
 <body>
-$END$
+<nav th:replace="partials :: navbar" />
+<div class="container" style="text-align: center">
+    <div th:each="post : ${posts}">
+        <h1 style="font-weight: bold" th:text="${post.title}">
+        </h1>
+<!--        <h3>By: <span style="font-weight: bold" th:text="${post.user}"/> </h3>-->
+        <p style="" th:text="${post.body}"> </p>
+        <form action="/posts/edit" method="GET">
+        <button type="submit" name="editId" th:value="${post.id}">Edit this post!</button>
+        </form>
+        <br>
+        <form action="/posts/delete" method="GET">
+            <button type="submit" name="deleteId" th:value="${post.id}">Delete this post!</button>
+        </form>
+        <br>
+    </div>
+</div>
+
+<footer th:replace="partials :: footer" />
 </body>
 </html>
