--- a/src/main/resources/templates/posts/index.html
+++ b/src/main/resources/templates/posts/index.html
@@ -10,7 +10,7 @@
     <div th:each="post : ${posts}">
         <a th:href="@{'/posts/'+${post.id}}"><h1 style="font-weight: bold" th:text="${post.title}">
         </h1></a>
-<!--        <h3>By: <span style="font-weight: bold" th:text="${post.user}"/> </h3>-->
+        <h3>By: <span style="font-weight: bold" th:text="${post.user.getEmail()}"/> </h3>
         <p style="" th:text="${post.body}"> </p>
 <!--        <form action="/posts/edit" method="GET">-->
 <!--        <button type="submit" name="editId" th:value="${post.id}">Edit this post!</button>-->
