--- a/src/main/resources/templates/posts/show.html
+++ b/src/main/resources/templates/posts/show.html
@@ -8,6 +8,7 @@
 <nav th:replace="partials :: navbar" />
 <div class="container" style="text-align: center">
     <h1 style="font-weight: bold" th:text="${post.title}"> </h1>
+    <h3>By: <span th:text="${post.user.getEmail()}"></span></h3>
 <!--    <h3>By: <span style="font-weight: bold" th:text="${post.user}"/> </h3>-->
     <p style="" th:text="${post.body}"> </p>
 </div>
