Authentication and more

--- a/src/main/resources/templates/posts/create.html
+++ b/src/main/resources/templates/posts/create.html
@@ -7,17 +7,24 @@
 <body>
 <nav th:replace="partials :: navbar" />
 <div class="container" style="text-align: center">
-    <form action="/posts/create" method="post">
-        <div class="form-group">
-            <label for="title">Post title</label>
-            <input type="text" class="form-control" id="title" name="title"
-                   placeholder="Enter title">
-        </div>
-        <div class="form-group">
-            <label for="body">Post body</label>
-            <textarea rows="10" cols="30" class="form-control" id="body" name="body"
-                      placeholder="Blog post body here"></textarea>
-        </div>
+<!--    <form action="/posts/create" method="post">-->
+<!--        <div class="form-group">-->
+<!--            <label for="title">Post title</label>-->
+<!--            <input type="text" class="form-control" id="title" name="title"-->
+<!--                   placeholder="Enter title">-->
+<!--        </div>-->
+<!--        <div class="form-group">-->
+<!--            <label for="body">Post body</label>-->
+<!--            <textarea rows="10" cols="30" class="form-control" id="body" name="body"-->
+<!--                      placeholder="Blog post body here"></textarea>-->
+<!--        </div>-->
+    <form th:action="@{/posts/create}" th:method="post" th:object="${post}">
+        Post title:
+        <input th:field="*{title}" />
+        <br/>
+        Post body:
+        <input th:field="*{body}" />
+        <br/>
         <button type="submit" class="btn btn-primary">Submit</button>
     </form>
 
