--- a/src/main/resources/templates/partials.html
+++ b/src/main/resources/templates/partials.html
@@ -27,7 +27,18 @@
                 <a class="nav-link" href="/posts">List of posts</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="/posts/create">Create a new post</a>
+                <a class="nav-link" href="/posts/makeapost" th:name="editId" th:value="0">Create a new post</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="/register">Register</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="/login">Login</a>
+            </li>
+            <li>
+                <form th:action="@{/logout}" th:method="post">
+                    <button class="btn-link btn" style="margin-top: 8px">Logout</button>
+                </form>
             </li>
         </ul>
     </div>
