--- a/src/main/resources/templates/posts/makeapost.html
+++ b/src/main/resources/templates/posts/makeapost.html
@@ -22,7 +22,7 @@
 <!--        <button type="submit" class="btn btn-primary">Submit</button>-->
 <!--    </form>-->
 
-    <form th:action="@{/posts/editcreate}" method="post" th:object="${post}">
+    <form th:action="@{/posts/makeapost}" method="post" th:object="${post}">
         <div class="form-group">
             <input type="hidden" th:field="*{id}"/>
             <input type="hidden" th:field="*{user}">
