--- a/src/main/resources/templates/posts/show.html
+++ b/src/main/resources/templates/posts/show.html
@@ -13,7 +13,7 @@
     <p style="" th:text="${post.body}"> </p>
 </div>
 <div class="container" style="text-align: center">
-    <form action="/posts/edit" method="GET">
+    <form action="/posts/makeapost" method="GET">
         <button type="submit" class="btn btn-primary" name="editId" th:value="${post.id}">Edit this post!</button>
     </form>
     <br>
