--- a/src/main/resources/templates/partials.html
+++ b/src/main/resources/templates/partials.html
@@ -9,10 +9,10 @@
 </head>
 <body>
 <nav th:fragment="navbar" class="navbar navbar-expand-sm navbar-light bg-light mb-3">
-    <div class="collapse navbar-collapse" id="navbarNav">
+    <div class="collapse navbar-collapse justify-content-between" id="navbarNav">
         <ul class="navbar-nav">
             <li class="nav-item">
-                <a class="nav-link" href="/home">Home</a>
+                <a class="nav-link" href="/">Home</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="/hello/Fortuna">Hello</a>
@@ -29,18 +29,26 @@
             <li class="nav-item">
                 <a class="nav-link" href="/posts/makeapost" th:name="editId" th:value="0">Create a new post</a>
             </li>
+        </ul>
+<!--            <div class="navbar navbar-right">-->
+                <ul class="navbar-nav">
             <li class="nav-item">
-                <a class="nav-link" href="/register">Register</a>
+                <form th:action="@{/register}" th:method="get">
+                    <button class="btn-link btn text-muted btn-secondary">Register</button>
+                </form>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="/login">Login</a>
+                <form th:action="@{/login}" th:method="get">
+                    <button class="btn-link btn text-muted btn-secondary">Login</button>
+                </form>
             </li>
-            <li>
+            <li class="nav-item">
                 <form th:action="@{/logout}" th:method="post">
-                    <button class="btn-link btn" style="margin-top: 8px">Logout</button>
+                    <button class="btn-link btn text-muted btn-secondary">Logout</button>
                 </form>
             </li>
         </ul>
+<!--            </div>-->
     </div>
 </nav>
 <!--<nav th:fragment="navbar">-->
